--- a/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListDialogs.styl
@@ -1,6 +1,6 @@
 @import "{ohif:design}/app"
 
-.roiImportListDialog
+.roi-import-list-dialog
   theme('border', '1px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
@@ -22,7 +22,7 @@
     font-weight: 400
     float: left
 
-  .roiImportListHeader
+  .roi-import-list-header
     display: -webkit-flex
     display: -ms-flexbox
     display: flex
@@ -32,7 +32,7 @@
     font-weight: 400
     text-align: left
 
-  .roiImportListCancel
+  .roi-import-list-cancel
     text-align: right
     margin-top: 16px
 
@@ -45,33 +45,29 @@
   .roiImportListTableButton
     width: 100%
 
-  .roiImportListBody
+  .roi-import-list-body
     max-height: calc(80vh - 300px);
     padding-right: 18px
     overflow-y: auto
     overflow-x: hidden
     display: inline-block
 
-  .roiImportListBody table, tr, th
+  .roi-import-list-body table, tr, th
     padding: 0px 10px
 
-  .roiImportListBody th
+  .roi-import-list-body th
     white-space: nowrap
 
-  .roiImportListBody td
+  .roi-import-list-body td
     white-space: nowrap
     padding: 0px 10px
 
-  .roiImportListFooter
+  .roi-import-list-footer
     display: -webkit-flex
     display: -ms-flexbox
     display: flex
     justify-content: space-around
     align-items: center
 
-  .roiImportListImport
-    text-align: center
-    margin: 5px
-
-  .leftAlignedCell
+  .roi-import-left-Cell
     text-align: left
