--- a/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListItem/roiImportListItem.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListItem/roiImportListItem.html
@@ -1,7 +1,7 @@
 <template name="roiImportListItem">
   <tr>
-    <td class="leftAlignedCell">{{name}}</td>
-    <td><input class="roiImportListItemCheck js-roi-check" type="checkbox" {{checked}} name="sync" value=""></td>
-    <td class="leftAlignedCell">{{collectionType}}</td>
+    <td class="roi-import-left-cell">{{name}}</td>
+    <td><input class="roi-import-list-item-check js-roi-check" type="checkbox" {{checked}} name="sync" value=""></td>
+    <td class="roi-import-left-cell">{{collectionType}}</td>
   </tr>
 </template>
