--- a/Packages/icr-xnat-roi/client/components/viewer/roiCollectionBuilderDialogs/roiCollectionBuilderDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/roiCollectionBuilderDialogs/roiCollectionBuilderDialogs.html
@@ -1,22 +1,22 @@
 <template name="roiCollectionBuilderDialogs">
   <dialog id="roiCollectionBuilderDialog"
-      class="roiCollectionBuilderDialog noselect"
+      class="roi-collection-builder-dialog noselect"
       oncontextmenu="return false">
-      <div class="roiCollectionBuilderHeader">
+      <div class="roi-collection-builder-header">
         <h3>Export ROI Collection</h3>
-        <a class="roiCollectionBuilderCancel js-volume-management-cancel btn btn-sm btn-secondary">
+        <a class="roi-collection-builder-cancel js-volume-management-cancel btn btn-sm btn-secondary">
           <i class="fa fa-times-circle fa-2x"></i>
         </a>
       </div>
 
       <hr />
 
-      <div class="roiCollectionBuilderListBody">
+      <div class="roi-collection-builder-list-body">
         <table>
         <tr>
-          <th nowrap>Name</th>
-          <th class="centeredCell">Export <input class="js-select-all-check" type="checkbox" {{selectAllChecked}} name="sync" value=""></th>
-          <th class="centeredCell">Contours</th>
+          <th nowrap class="left-aligned-cell">Name</th>
+          <th>Export <input class="js-select-all-check" type="checkbox" {{selectAllChecked}} name="sync" value=""></th>
+          <th>Contours</th>
         </tr>
         {{#each region in regions}}
             {{>roiCollectionBuilderListItem region}}
@@ -26,10 +26,10 @@
 
       <hr/>
 
-      <div class="roiCollectionBuilderFooter">
-        <div class="roiCollectionBuilderTextInputOptions">
+      <div class="roi-collection-builder-footer">
+        <div class="roi-collection-builder-text-input-options">
             Name <input name="roiCollectionBuilderTextInput"
-                   class="roiCollectionBuilderTextInput"
+                   class="roi-collection-builder-text-input"
                    type="text"
                    value="{{roiCollectionName}}"
                    tabindex="-1"
@@ -37,12 +37,11 @@
                    onfocus="this.select()"/>
         </div>
 
-        <div class="roiCollectionBuilderExport">
-          <a class="roiCollectionBuilderExportButton btn btn-sm btn-primary">
+        <div class="roi-collection-builder-export">
+          <a class="roi-collection-builder-export-button btn btn-sm btn-primary">
               <svg stroke='#fff'>
                 <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-export"}}></use>
               </svg>
-              <h5 class="exportButtonText"></h5>
           </a>
       </div>
     </div>
