cleaned up roiImportListDialogs, roiCollectionBuilderDialogs and ioDialogs.

--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
@@ -7,7 +7,6 @@
   z-index: 1000
 
   max-height: calc(100% - 50px)
-  min-width: 260px
   max-width: calc(100% - 100px)
   position: absolute
   margin: auto
@@ -22,13 +21,15 @@
     font-weight: 400
     text-align: left
     border-radius: 8px
-    padding: 2px
 
   .brush-metadata-input
     width: 100%
 
   .brush-metadata-new-button
     width: 100%
+
+  .brush-metadata-label-input
+    margin-bottom: 20px
 
   .brush-metadata-vert-box
     display: -webkit-flex
@@ -38,7 +39,6 @@
     justify-context: flex-start
 
   .brush-metadata-vert-box label
-    margin-top: 20px
     text-align: left
 
   .brush-metadata-horizontal-box
