--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
@@ -18,7 +18,7 @@
     oncontextmenu="return false">
     <div>
       <h5 class="io-description">Title</h5>
-      <a class="io-dialog-cancel btn btn-sm btn-secondary">
+      <a class="io-dialog-cancel io-dialog-cancel-js btn btn-sm btn-secondary">
         <i class="fa fa-times-circle fa-2x"></i>
       </a>
     </div>
