--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/helpDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/helpDialogs.styl
@@ -1,6 +1,6 @@
 @import "{ohif:design}/app"
 
-.helpDialog
+.help-dialog
   theme('border', '1px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
@@ -18,10 +18,10 @@
   border-radius: 8px
   text-align: center
 
-  .helpNavBar
+  .help-nav-bar
     float: left
 
-  .helpButton
+  .help-button
     float: left
 
   .pressed
@@ -34,7 +34,7 @@
     theme('stroke', '$textSecondaryColor')
     theme('fill', '$textSecondaryColor')
 
-  .helpTitle
+  .help-title
     float: left
     margin-left: 20px
 
@@ -43,7 +43,7 @@
     top: 50%
     transform: translateY(-50%)
 
-  .helpDialogCancel
+  .help-dialog-cancel
     float: right
 
   li
@@ -55,27 +55,18 @@
     text-align: left
     float: left
 
-  .subHelpNavBar
+  .sub-help-nav-bar
     float: left
     clear: both
 
-  .subHelpButton
+  .sub-help-button
     float: left
 
-  .subHelpTitle
+  .sub-help-title
     float: left
     margin-left: 20px
 
-  h3
-    font-weight: 400
-    top: 50%
-    transform: translateY(-50%)
-
-  li
-    clear: both
-    text-align: left
-
-  .subHelpBody
+  .sub-help-body
     height: 200px
     width: 100%
     overflow-y: auto
@@ -83,7 +74,7 @@
     display: inline-block
     float: left
 
-  .subHelpBody p
+  .sub-help-body p
     float:left
     text-align: left
 
