--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/brushHelpMenu/brushHelpMenu.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/brushHelpMenu/brushHelpMenu.html
@@ -1,18 +1,18 @@
 <template name="brushHelpMenu">
-  <div id="brushHelp">
-      <div class="subHelpHeader">
-        <div class="subHelpNavBar">
-          <a class="subHelpButton js-help-brush btn btn-sm btn-primary">
+  <div>
+      <div>
+        <div class="sub-help-nav-bar">
+          <a class="sub-help-button js-help-brush btn btn-sm btn-primary">
             <i id="fontAwesomeIcon" class="{{pressed 'Brush'}} fa fa fa-paint-brush fa-2x"></i>
           </a>
         </div>
 
-        <div class="subHelpTitle">
+        <div class="sub-help-title">
           <h3>{{ioTitle}}</h3>
         </div>
       </div>
 
-      <div class="subHelpBody">
+      <div class="sub-help-body">
         {{#if showBrushHelp 'Brush'}}
           {{>brushHelpBrush}}
         {{/if}}
