--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/freehandHelpMenu.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/freehandHelpMenu.html
@@ -1,33 +1,33 @@
 <template name="freehandHelpMenu">
-  <div id="freehandHelp">
-      <div class="subHelpHeader">
-        <div class="subHelpNavBar">
-          <a class="subHelpButton js-help-draw btn btn-sm btn-primary">
+  <div>
+      <div>
+        <div class="sub-help-nav-bar">
+          <a class="sub-help-button js-help-draw btn btn-sm btn-primary">
               <svg class={{pressed 'Draw'}}>
                 <use xlink:href={{absoluteUrl "packages/ohif_viewerbase/assets/icons.svg#icon-freehand-draw"}}></use>
               </svg>
           </a>
-          <a class="subHelpButton js-help-sculpt btn btn-sm btn-primary">
+          <a class="sub-help-button js-help-sculpt btn btn-sm btn-primary">
             <svg class={{pressed 'Sculpt'}}>
               <use xlink:href={{absoluteUrl "packages/ohif_viewerbase/assets/icons.svg#icon-freehand-sculpt"}}></use>
             </svg>
           </a>
-          <a class="subHelpButton js-help-volumes btn btn-sm btn-primary">
+          <a class="sub-help-button js-help-volumes btn btn-sm btn-primary">
             <svg class={{pressed 'Volumes'}}>
               <use xlink:href={{absoluteUrl "packages/icr_peppermint-tools/assets/icons.svg#icon-freehand-switch-volume"}}></use>
             </svg>
           </a>
-          <a class="subHelpButton js-help-toggle-stats btn btn-sm btn-primary">
+          <a class="sub-help-button js-help-toggle-stats btn btn-sm btn-primary">
             <i id="fontAwesomeIcon" class="{{pressed 'Toggle Stats'}} fa fa-commenting fa-2x"></i>
           </a>
         </div>
 
-        <div class="subHelpTitle">
+        <div class="sub-help-title">
           <h3>{{freehandTitle}}</h3>
         </div>
       </div>
 
-      <div class="subHelpBody">
+      <div class="sub-help-body">
         {{#if showFreehandHelp 'Draw'}}
           {{>freehandHelpDraw}}
         {{else if showFreehandHelp 'Sculpt'}}
