Added visibility toggle for segmentations.

--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
@@ -7,7 +7,9 @@
         <th>Category</th>
         <th>Type</th>
         <th>Paint</th>
+        <th>Hide</th>
         <th>Edit</th>
+        <th>Delete</th>
       </tr>
 
       {{#each segmentation in segmentations}}
