--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementListItem/segManagementListItem.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementListItem/segManagementListItem.html
@@ -7,8 +7,18 @@
       <input type="radio" class="js-switch-seg" {{checked}} name="sync" value="">
     </td>
     <td class='centered-cell'>
+      <a class="js-seg-showHide btn btn-sm btn-secondary">
+        <i class="{{showHideIcon}}"></i>
+      </a>
+    </td>
+    <td class='centered-cell'>
       <a class="js-seg-edit btn btn-sm btn-secondary">
-        <i class="fa fa fa-wrench"></i>
+        <i class="fa fa-wrench"></i>
+      </a>
+    </td>
+    <td class='centered-cell'>
+      <a class="js-seg-delete btn btn-sm btn-secondary">
+        <i class="fa fa-times"></i>
       </a>
     </td>
   </tr>
