--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.html
@@ -1,4 +1,5 @@
 <template name="segManagementDialogs">
+  <!-- Segmentation Management Menu Dialog -->
   <dialog id="segManagementDialog"
       class="seg-management-dialog noselect"
       oncontextmenu="return false">
@@ -18,6 +19,29 @@
           <i class="fa fa-plus-circle"></i> Segmentation
         </a>
       </div>
+
+  </dialog>
+
+  <!-- Delete Segmentation Dialog -->
+  <dialog id="segDeleteDialog"
+    class="seg-delete-dialog noselect"
+    oncontextmenu="return false">
+    <div>
+      <h5>Warning!</h5>
+      <p>
+        Are you sure you want to delete <br/>
+        <i class="fa fa-square" style="color:{{segmentationToDeleteColor}}"></i> {{segmentationToDelete}}? <br/>
+        This cannot be undone.
+      </p>
+    </div>
+    <div class="seg-delete-horizontal-box">
+      <a class="js-seg-delete-confirm btn btn-sm btn-primary">
+        <i class="fa fa fa-check-circle fa-2x"></i>
+      </a>
+      <a class="js-seg-delete-cancel btn btn-sm btn-primary">
+        <i class="fa fa fa-times-circle fa-2x"></i>
+      </a>
+    </div>
 
   </dialog>
 </template>
