--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.styl
@@ -61,3 +61,27 @@
   .seg-management-new-button
     float: center
     width: 100%
+
+
+.seg-delete-dialog
+  theme('border', '1px solid $uiBorderColor', 0.95)
+  theme('background', '$uiGrayDarkest', 0.95)
+  theme('color', '$textSecondaryColor')
+  z-index: 1000
+
+  max-height: calc(100% - 50px)
+  max-width: calc(100% - 100px)
+  position: absolute
+  margin: auto
+
+  padding-right: 10px
+  padding-left: 10px
+  padding-bottom: 10px
+  border-radius: 8px
+  text-align: center
+
+  h3
+    font-weight: 400
+    text-align: left
+    border-radius: 8px
+    padding: 2px
