Export mask dialog complete, TODO: segManagementDialog broken.

--- a/Packages/icr-xnat-roi/client/components/viewer/roiCollectionBuilderDialogs/roiCollectionBuilderDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/roiCollectionBuilderDialogs/roiCollectionBuilderDialogs.html
@@ -3,8 +3,8 @@
       class="roi-collection-builder-dialog noselect"
       oncontextmenu="return false">
       <div class="roi-collection-builder-header">
-        <h3>Export ROI Collection</h3>
-        <a class="roi-collection-builder-cancel js-volume-management-cancel btn btn-sm btn-secondary">
+        <h3>Export Contours</h3>
+        <a class="roi-collection-builder-cancel js-roi-collection-cancel btn btn-sm btn-secondary">
           <i class="fa fa-times-circle fa-2x"></i>
         </a>
       </div>
