--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -13,6 +13,7 @@
             {{>freehandSetNameDialogs}}
             {{>brushMetadataDialogs}}
             {{>segManagementDialogs}}
+            {{>segBuilderDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
