--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -14,6 +14,7 @@
             {{>brushMetadataDialogs}}
             {{>segManagementDialogs}}
             {{>segBuilderDialogs}}
+            {{>maskImportListDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
