The great jQuery purge has begun with segManagementDialogs.

--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
@@ -27,4 +27,22 @@
       <p class="io-body">Text</p>
     </div>
   </dialog>
+
+  <!-- Confirmation Dialog -->
+  <dialog id="ioConfirmationDialog"
+    class="io-confirmation-dialog noselect"
+    oncontextmenu="return false">
+    <div>
+      <h5 class="io-confirmation-title"></h5>
+      <p class="io-confirmation-body"></p>
+    </div>
+    <div class="io-confirmation-horizontal-box">
+      <a class="js-io-confirmation-confirm btn btn-sm btn-primary">
+        <i class="fa fa fa-check-circle fa-2x"></i>
+      </a>
+      <a class="js-io-confirmation-cancel btn btn-sm btn-primary">
+        <i class="fa fa fa-times-circle fa-2x"></i>
+      </a>
+    </div>
+  </dialog>
 </template>
