A bunch of checks/warnings/confirmations for IO based on the user's permissions.

--- a/Packages/icr-xnat-roi/client/components/viewer/segBuilderDialogs/segBuilderDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/segBuilderDialogs/segBuilderDialogs.styl
@@ -54,6 +54,11 @@
     overflow-x: hidden
     display: inline-block
 
+  .seg-builder-list-collection-info
+    border-top: 1px solid
+    border-bottom: 1px solid
+
+
   .seg-builder-footer
     display: -webkit-flex
     display: -ms-flexbox
