--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
@@ -6,6 +6,13 @@
         <th colspan="3" class="left-aligned-cell">{{roiCollectionInfo.name}}</th>
         <th colspan="4" class="right-aligned-cell">{{roiCollectionInfo.label}}</th>
       </tr>
+      {{#if roiCollectionInfo.type}}
+        <tr class="seg-management-list-collection-info">
+          <th colspan="3" class="left-aligned-cell">Type: {{roiCollectionInfo.type}}</th>
+          <th colspan="4" class="right-aligned-cell">Modified: {{roiCollectionInfo.modified}}</th>
+        </tr>
+      {{/if}}
+
       <tr>
         <th>Label</th>
         <th>Category</th>
