--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
@@ -45,4 +45,25 @@
       </a>
     </div>
   </dialog>
+
+  <!-- Confirmation Overwrite Dialog -->
+  <dialog id="ioOverwriteConfirmationDialog"
+    class="io-confirmation-dialog noselect"
+    oncontextmenu="return false">
+    <div>
+      <h5 class="io-confirmation-title"></h5>
+      <p class="io-confirmation-body"></p>
+    </div>
+    <div class="io-confirmation-horizontal-box">
+      <a class="js-io-confirmation-confirm-overwrite btn btn-sm btn-primary">
+        Overwrite
+      </a>
+      <a class="js-io-confirmation-confirm-new btn btn-sm btn-primary">
+        New
+      </a>
+      <a class="js-io-confirmation-cancel btn btn-sm btn-primary">
+        Cancel <i class="fa fa fa-times-circle fa-2x"></i>
+      </a>
+    </div>
+  </dialog>
 </template>
