--- a/Packages/icr-xnat-roi/client/components/viewer/segBuilderDialogs/segBuilderDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/segBuilderDialogs/segBuilderDialogs.html
@@ -13,6 +13,20 @@
 
       <div class="seg-builder-list-body">
         <table class="peppermint-table">
+
+            {{#if roiCollectionInfo}}
+              {{#with roiCollectionInfo}}
+                <tr class="seg-builder-list-collection-info">
+                  <th class="left-aligned-cell">{{name}}</th>
+                  <th class="centered-cell">{{label}}</th>
+                  <th class="right-aligned-cell">{{type}}</th>
+                </tr>
+              {{/with}}
+            {{else}}
+              <tr class="seg-builder-list-collection-info">
+                <th colspan="3" class="left-aligned-cell">New SEG ROI Collection</th>
+              </tr>
+            {{/if}}
           <tr>
             <th>Label</th>
             <th class="centered-cell">Category</th>
