--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpDraw.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpDraw.html
@@ -19,5 +19,14 @@
       <li>Ctrl-click on a line to insert a new handle.</li>
       <li>Drag a handle to move it.</li>
     </ul>
+    <h5>Shortcuts</h5>
+    <ul>
+      <li>Clicking ‘N’ will create a new volume and activate it.</li>
+      <li>
+        Alt-click (cmd-click on mac) a contour node to select it as
+        the active ROI for drawing.
+      </li>
+      <li>Double-click a contour node to change the name of an ROI.</li>
+    </ul>
   </div>
 </template>
