--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpVolumes.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpVolumes.html
@@ -10,19 +10,7 @@
     <p>
       To avoid potential duplication, imported and exported ROIs are locked for
       editing. These can still be viewed in the ROI manager by toggling
-      "view locked ROIs".
+      "view locked ROIs". The ability to edit ROI Collections will come in the future.
     </p>
-    <br/>
-    <p>
-      Whilst using the Draw tool, the following shortcuts are also available:
-    </p>
-    <ul>
-      <li>Clicking ‘N’ will create a new volume and activate it.</li>
-      <li>
-        Alt-click (cmd-click on mac) a contour to select it as
-        the active ROI for drawing.
-      </li>
-      <li>Double-click a contour to change the name of an ROI.</li>
-    </ul>
   </div>
 </template>
