--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/freehandHelpMenu.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/freehandHelpMenu.html
@@ -32,7 +32,7 @@
           {{>freehandHelpDraw}}
         {{else if showFreehandHelp 'Sculpt'}}
           {{>freehandHelpSculpt}}
-        {{else if showFreehandHelp 'Volumes'}}
+        {{else if showFreehandHelp 'ROI Management'}}
           {{>freehandHelpVolumes}}
         {{else if showFreehandHelp 'Toggle Stats'}}
           {{>freehandHelpToggleStats}}
