Added reactive toggle UI button.

--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/brushHelpMenu/brushHelpMenu.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/brushHelpMenu/brushHelpMenu.html
@@ -6,7 +6,7 @@
             <i id="fontAwesomeIcon" class="{{pressed 'Paint'}} fa fa fa-paint-brush fa-2x"></i>
           </a>
           <a class="sub-help-button js-help-seg-management btn btn-sm btn-primary">
-            <svg class={{pressed 'Sculpt'}}>
+            <svg class={{pressed 'Seg Management'}}>
               <use xlink:href={{absoluteUrl "packages/icr_peppermint-tools/assets/icons.svg#icon-seg-management-menu"}}></use>
             </svg>
           </a>
