--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
@@ -4,9 +4,9 @@
         <svg class="logo-image">
             <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-ohif-logo"}}></use>
         </svg>
-        <div class="logo-text">OHIF Viewer XNAT RoI plugin - v1.7 - cornerstoneTools v3 ALPHA</div>
+        <div class="logo-text">OHIF Viewer XNAT RoI plugin - v1.8 - cornerstoneTools v3 ALPHA</div>
         {{/section}}
-        <!--- TODO: Maybe this will become more integrated with the ROI management, but not sure at this stage.
+        <!-- TODO: options removed for now, may be made more compatible to XNAT-OHIF version in the future.
         {{#section 'headerMenu'}}
             <span class="header-options pull-left m-r-1">Options</span>
             <div class="menu-toggle pull-right">
