--- a/StandaloneViewer/StandaloneViewer/client/components/toolbarSection/toolbarSection.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/toolbarSection/toolbarSection.html
@@ -5,9 +5,11 @@
                 {{>roundedButtonGroup leftSidebarToggleButtonData}}
             </div>
             {{>toolbarSectionTools toolbarButtons=toolbarButtons}}
+            <!-- TODO: Maybe measurements table will be merged with the ROI/Masks interfaces in the future?
             <div class="pull-right m-t-1 rm-x-1">
                 {{>roundedButtonGroup rightSidebarToggleButtonData}}
             </div>
+            -->
         </div>
     </div>
 </template>
