--- a/Packages/ohif-header/client/components/header/header.html
+++ b/Packages/ohif-header/client/components/header/header.html
@@ -1,12 +1,10 @@
 <template name="header">
-    <div class="header noselect {{reactive headerClasses}}">
-        <div class="clearfix">
-            <a target='_blank' class="brand pull-left" href="{{choose this.brandHref '/'}}">
-                {{>section 'brand'}}
-            </a>
-            {{>section 'headerAfterBrand'}}
-            <a href='#' class="header-menu pull-right">{{>section 'headerMenu'}}</a>
-        </div>
-        {{>UI.contentBlock}}
+  <div class="header noselect {{reactive headerClasses}}">
+    <div class="clearfix">
+      <a target="_blank" class="brand pull-left"> {{>section 'brand'}} </a>
+      {{>section 'headerAfterBrand'}}
+      <a href="#" class="header-menu pull-right">{{>section 'headerMenu'}}</a>
     </div>
+    {{>UI.contentBlock}}
+  </div>
 </template>
