--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
@@ -4,7 +4,7 @@
         <svg class="logo-image">
             <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-ohif-logo"}}></use>
         </svg>
-        <div class="logo-text">OHIF Viewer XNAT RoI plugin - v1.8 - cornerstoneTools v3 ALPHA</div>
+        <div class="logo-text">OHIF-XNAT Viewer 1.11.4</div>
         {{/section}}
         <!-- TODO: options removed for now, may be made more compatible to XNAT-OHIF version in the future.
         {{#section 'headerMenu'}}
