Largely working subject view. Need to do a few more checks for permissions.

--- a/Packages/ohif-viewerbase/client/components/studyBrowser/studyBrowser/studyBrowser.html
+++ b/Packages/ohif-viewerbase/client/components/studyBrowser/studyBrowser/studyBrowser.html
@@ -1,10 +1,24 @@
+<!-- JamesAPetts Edit: Add in Study Description and minimisation.-->
 <template name="studyBrowser">
     <div class="studyBrowser">
         <div class="scrollableStudyThumbnails">
             {{#each study in studies}}
-                {{#each thumbnail in (sort (studyThumbnails study) thumbnailSortBy thumbnailSortType)}}
-                    {{>thumbnailEntry thumbnail=thumbnail}}
-                {{/each}}
+                {{#if study.studyDescription}}
+                  <div>
+                    <i id="{{study.studyInstanceUid}}" class="{{showHideButton study}} btn btn-sm btn-secondary js-show-hide"></i>
+                    <h2 class="scrollableStudyThumbnailsStudyDescription">
+                      {{study.studyDescription}}
+                    </h2>
+                  </div>
+                {{/if}}
+
+                <div class="scrollableStudySeriesList {{isStudyVisable study}}" > <!--style="visibility: {{isStudyVisable study}}"-->
+                <!--{{#if isStudyVisable study}}-->
+                  {{#each thumbnail in (sort (studyThumbnails study) thumbnailSortBy thumbnailSortType)}}
+                      {{>thumbnailEntry thumbnail=thumbnail}}
+                  {{/each}}
+                <!--{{/if}}-->
+                </div>
             {{/each}}
         </div>
     </div>
